compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__panic__bare.snap
---
source: compiler-core/src/nix/tests/panic.rs
expression: "\nfn go() {\n  panic\n}\n"
---
let go = builtins.throw "panic expression evaluated"; in {}
