compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__panic__case.snap
---
source: compiler-core/src/nix/tests/panic.rs
expression: "\nfn go(x) {\n  case x {\n    _ -> panic\n  }\n}\n"
---
let go = x: builtins.throw "panic expression evaluated"; in {}
