compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__panic__panic_with_call.snap
---
source: compiler-core/src/nix/tests/panic.rs
expression: "\nfn go(x) {\n  panic as x(5, \"abc\")\n}\n"
---
let go = x: builtins.throw (x 5 "abc"); in {}
