compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__panic__sequence.snap
---
source: compiler-core/src/nix/tests/panic.rs
expression: "\nfn go(at_the_disco) {\n  panic\n  at_the_disco\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) makeError;
  
  go =
    at_the_disco:
      let
        _' =
          builtins.throw
            (makeError "panic" "my/mod" 3 "go" "panic expression evaluated" {});
      in builtins.seq _' at_the_disco;
in {}
